<resources>
    <string name="app_name">Budget Manager</string>

    <string name="budgets_action">Budgets</string>
    <string name="sources_action">Sources</string>
    <string name="graphs_action">Graphs</string>
    <string name="logout_action">Logout</string>
    <string name="budget_name">Budget Name</string>
    <string name="date">Date</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="update_budget">Update Budget</string>
    <string name="delete_budget">Delete budget</string>
    <string name="pick_date">Choose date</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="type">Type</string>
    <string name="comment">Comment</string>
    <string name="update_source">Update source</string>
    <string name="delete_source">Delete source</string>
    <string name="przych_d">Income</string>
    <string name="wydatek">Expense</string>
    <string name="Delete_confirm">Are you sure you want to delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updating">Updating…</string>
    <string name="wait">Wait…</string>
    <string name="fetching">Fetching…</string>
    <string name="adding">Adding…</string>
    <string name="logo">Logo</string>
    <string name="expenditures_by_users">Expenditures by users</string>
    <string name="expenditures_by_sources">Expenditures by sources</string>
</resources>
