<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_budgets"
        android:orderInCategory="100"
        android:title="@string/budgets_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sources"
        android:orderInCategory="200"
        android:title="@string/sources_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_graphs"
        android:orderInCategory="300"
        android:title="@string/graphs_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/logout_action"
        app:showAsAction="ifRoom" />
</menu>